--- a/R_vs_Stata.html
+++ b/R_vs_Stata.html
@@ -12,7 +12,7 @@
     <link href="R_vs_Stata_files/tachyons/tachyons.min.css" rel="stylesheet" />
     <link href="R_vs_Stata_files/panelset/panelset.css" rel="stylesheet" />
     <script src="R_vs_Stata_files/panelset/panelset.js"></script>
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"bca2d00c743a4737b95bf124c36ae1bf","expires":14}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"xd5a313253f1408eaf5171fe49a9a4c1","expires":14}</script>
     <script src="R_vs_Stata_files/himalaya/himalaya.js"></script>
     <script src="R_vs_Stata_files/js-cookie/js.cookie.js"></script>
     <link href="R_vs_Stata_files/editable/editable.css" rel="stylesheet" />
@@ -104,7 +104,7 @@ class: center, middle
 
 * R is less specialized:
 --
-more flexibility and more functionalities.
+ more flexibility and more functionalities.
 
 --
 
@@ -116,11 +116,11 @@ more flexibility and more functionalities.
 
 
 ---
-### Advantages of Stata
+## Advantages of Stata
 
 - Stata is more specialized:
 --
-Some common but complex tasks are simpler
+ Some common but complex tasks are simpler
 
 --
 
@@ -224,13 +224,13 @@ Development of new specialized techniques and tools could happen faster (e.g. ie
 ---
 ## R vs Python
 
-- I Prefer R because it is designed for and by academics, not developers.
+- I Prefer R because it was/is designed for and by academics, noy by developers.
 
 --
 
 - If there is something that I need to do in Python, I just run Python from R, get the results, and keep working on R
 --
-(same thing with Stata). 
+ (same thing with Stata). 
 
 --
 
@@ -265,7 +265,7 @@ class: center, middle
 
 --
 
-- If R keeps getting more popularity than R, it will be more attractive in their CVs. 
+- If Python keeps getting more popularity than R, it will be more attractive in their CVs. 
 
 --
 
@@ -335,6 +335,12 @@ __R__ works in a completely different way:
 
 * Whenever you run anything you intend to use in the future, __you need to store it as an object__.
 
+
+---
+
+class: middle center
+
+## Question? 
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
