--- a/_posts/r-vs-stata/r-vs-stata.html
+++ b/_posts/r-vs-stata/r-vs-stata.html
@@ -118,7 +118,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   <!--/radix_placeholder_rmarkdown_metadata-->
   
   <script type="text/json" id="radix-resource-manifest">
-  {"type":"NULL"}
+  {"type":"character","attributes":{},"value":["r-vs-stata_files/anchor-4.2.2/anchor.min.js","r-vs-stata_files/bowser-1.9.3/bowser.min.js","r-vs-stata_files/distill-2.2.21/template.v2.js","r-vs-stata_files/fitvids-2.1.1/fitvids.min.js","r-vs-stata_files/header-attrs-2.18/header-attrs.js","r-vs-stata_files/jquery-3.6.0/jquery-3.6.0.js","r-vs-stata_files/jquery-3.6.0/jquery-3.6.0.min.js","r-vs-stata_files/jquery-3.6.0/jquery-3.6.0.min.map","r-vs-stata_files/popper-2.6.0/popper.min.js","r-vs-stata_files/tippy-6.2.7/tippy-bundle.umd.min.js","r-vs-stata_files/tippy-6.2.7/tippy-light-border.css","r-vs-stata_files/tippy-6.2.7/tippy.css","r-vs-stata_files/tippy-6.2.7/tippy.umd.min.js","r-vs-stata_files/webcomponents-2.0.0/webcomponents.js"]}
   </script>
   <!--radix_placeholder_navigation_in_header-->
   <!--/radix_placeholder_navigation_in_header-->
@@ -1523,7 +1523,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <div class="d-article">
 <div class="layout-chunk" data-layout="l-body">
 <div class="shareagain" style="min-width:300px;margin:1em auto;" data-exeternal="1">
-<iframe src="slides/R_vs_Stata.html" width="1600" height="900" style="border:2px solid currentColor;" loading="lazy" allowfullscreen></iframe>
+<iframe src="slides/R_vs_Stata" width="1600" height="900" style="border:2px solid currentColor;" loading="lazy" allowfullscreen></iframe>
 <script>fitvids('.shareagain', {players: 'iframe'});</script>
 </div>
 </div>
